--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
       </form>
 
 
-      <!----<p2><a href="index.html">Por que Viajar a Escocia</a></p2>--/>-->
+      <!----<p2><a href="index.html">graficas y analisis</a></p2>--/>-->
       <p2><a href="inventarios.html"> Inventarios </a></p2>
       <p2><a href="estadisticas.html"> Estadisticas</a></p2>
       <p2><a href="reportesdeusuario.html"> Reportes de Usuario</a></p2>
